Fixed carousel dots overlap on narrow screens. - first slide has special styling for under 430px

--- a/scss/3.layout/_3.carousel.scss
+++ b/scss/3.layout/_3.carousel.scss
@@ -28,14 +28,14 @@
 }
 
 .owl-theme .owl-nav.disabled + .owl-dots {
-    margin-top: 10px;
+    margin-top: -30px;
 }
 
 .owl-theme .owl-dots {
     text-align: center;
     -webkit-tap-highlight-color: transparent;
     position: relative;
-    bottom: 75px;
+    bottom: 20px;
 }
 .owl-theme .owl-dots .owl-dot {
     display: inline-block;
@@ -78,6 +78,16 @@
         .btn {
             @include btn($color-white, map-get($service-colors, "bespoke-software"), 1.25em, 5px, 20px, true);
             line-height: 2.5em; // 50px(/20px)
+
+        }
+        @media(max-width: 430px) {
+            p {
+                font-size: 1.125em;
+            }
+            .btn {
+                margin-top: 0px;
+                margin-bottom: 45px;
+            }
         }
     }
     &.bespoke-software {
